@@ -14,7 +14,6 @@ Revision history for Perl module Math::Prime::Util::GMP
     - is_practical(n)          is n a practical number
     - is_trial_prime(n)        primality using trial division
     - is_almost_prime(k,n)     does n have exactly k prime factors
-    - submod                   (a - b) % n
     - prime_bigomega(n)        number of factors (with multiplicity)
     - prime_omega(n)           number of factors (distinct)
     - powerful_count(n[,k])    count of k-powerful numbers <= n
@@ -42,6 +41,9 @@ Revision history for Perl module Math::Prime::Util::GMP
     - cdivint(a,b)             integer a/b quotient  (ceiling)
     - fdivrem(a,b)             integer a/b quo + rem (floor)
     - cdivrem(a,b)             integer a/b quo + rem (ceiling)
+    - submod(a,b,n)            (a - b) % n
+    - muladdmod(a, b, c, n)    (a * b + c) % n
+    - mulsubmod(a, b, c, n)    (a * b - c) % n
     - lucasumod(P,Q,k,n)       modular Lucas U value
     - lucasvmod(P,Q,k,n)       modular Lucas V value
     - lucasuvmod(P,Q,k,n)      (U(P,Q)_k mod n, V(P,Q)_k mod n)
